# kokkos-energy-benchmarks

./: readme.md
bytes-flops/: readme.md
bytes-flops/config/: benchmark_config.txt
bytes-flops/post-process/: README.md  __init__.py  config_parser.py  data_loader.py  file_utils.py  nvml_plot.py  plotting.py  requirements.txt  statistics.py  transition_analysis.py
bytes-flops/post-process/tests/double/A1/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/double/A2/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/double/B1/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/double/B2/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/double/C1/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/double/C2/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/double/D1/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/double/D2/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/float/A1/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  inter_repetition_wait_1000ms.txt  inter_repetition_wait_100ms.txt  inter_repetition_wait_30000ms.txt  inter_repetition_wait_60000ms.txt
bytes-flops/post-process/tests/float/A2/: baseline.txt  combined_wait_1000ms.txt  combined_wait_100ms.txt  combined_wait_30000ms.txt  combined_wait_60000ms.txt  inter_kernel_wait_1000ms.txt  inter_kernel_wait_100ms.txt  inter_kernel_wait_30000ms.txt  inter_kernel_wait_60000ms.txt  (+4 more)
bytes_flops/: CMakeLists.txt
bytes_flops/sources/: energy_benchmark.cpp
compute_memory_peak/: CMakeLists.txt  examples.txt  main.cpp
cuda_official_bench/: CMakeLists.txt  saxpy.cu
energy_matrix/: CMakeLists.txt  main.cpp  matrix_config.txt
energy_matrix/post-process/: plot_results.py  requirements.txt
nvml_refresh_rate/: CMakeLists.txt  main.cpp
(+286 files in other folders)
